[project]
name = "notion-mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-core>=0.4.0",
    "autogen-ext[mcp,openai]>=0.4.0",
    "dotenv>=0.9.9",
    "ngrok>=1.7.0",
]
